--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass-loader": "^13.2.0",
     "shakapacker": "7.2.2",
     "style-loader": "^3.3.1",
+    "swr": "^2.3.3",
     "terser-webpack-plugin": "5",
     "use-image": "^1.1.1",
     "webpack": "5",
@@ -54,6 +55,7 @@
     "webpack-cli": "4",
     "webpack-dev-server": "4",
     "webpack-merge": "5",
+    "yarn": "^1.22.22",
     "zustand": "^4.3.9"
   },
   "version": "0.1.0",
