--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-leaflet": "^4.2.0",
-    "react-on-rails": "^13.4.0",
+    "react-on-rails": "14.2.1",
     "react-select": "^5.7.0",
     "react-simple-maps": "^3.0.0",
     "react-use-wizard": "^2.2.1",
