--- a/compose.yml
+++ b/compose.yml
@@ -1,22 +1,28 @@
 services:
   ml-services:
-    image: "kevin1252/ml-grain-wise:1.2"
+    image: "kevin1252/ml-grain-wise:1.3"
     env_file:
       - env
     volumes:
       - ./models:/ml-services/models
+    restart: always
 
   web:
-    # build: .
-    image: 'kevin1252/grain-wise:1.2'
+    image: 'kevin1252/grain-wise:1.3'
     volumes:
       - ./images:/dfg/images
       - ./storage:/dfg/storage
-      - ./tmp:/tmp
     ports:
       - "9000:3000"
     env_file:
       - env
+    tmpfs:
+      - /tmp/pids
+    restart: always
+    depends_on:
+      - db
+      - redis
+      - ml-services
 
   redis:
     image: "redis:alpine"
