--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "prettier": "^2.8.3",
-    "standard": "^17.1.0"
+    "standard": "^17.1.0",
+    "swc-loader": "^0.2.7"
   }
 }
